# docker_postgres

./: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
Server/headers/: clientConnection.h  dispatcher.h  server.h
Server/headers/DBHelpers/: dbhelper.h
Server/headers/Icommand/: fulldump.h  icommand.h  login.h  registry.h  rollback.h  sync.h
Server/headers/Utils/: protocol.h  utils.h
Server/sources/: clientConnection.cpp  dispatcher.cpp  server.cpp
Server/sources/DBHelpers/: dbhelper.cpp
Server/sources/Icommand/: fulldump.cpp  login.cpp  registry.cpp  rollback.cpp  sync.cpp
client/: CMakeLists.txt  appContext.h  main.cpp  mainwindow.cpp  mainwindow.h
client/headers/: client.h  controller.h  dbhelper.h  dispatcher.h  localOpcode.h  serverOpcode.h
client/headers/Controllers/: controller.h
client/headers/DBHelpers/: dbcrud.h  dbhelper.h
client/headers/Models/: tableModel.h
client/headers/OpCodes/: localOpcode.h  serverOpcode.h
client/headers/Opcodes/: serverOpcode.h
client/headers/UI/: authPage.h  mainPage.h
client/headers/Utils/: keys.h  protocol.h  userInfo.h  utils.h
client/headers/controllers/: controller.h
client/headers/dispatchers/: dispatcher.h
client/headers/icommand/: get.h  icommand.h  login.h  registry.h  update.h
client/headers/models/: tableModel.h
client/headers/utils/: packetQueryStructure.h  packetStructure.h  serverQueryStructure.h  serverResponseStructure.h  utils.h
client/sources/: client.cpp  controller.cpp  dbhelper.cpp  dispatcher.cpp
client/sources/Controllers/: controller.cpp
client/sources/DBHelpers/: dbcrud.cpp  dbhelper.cpp
client/sources/Models/: tableModel.cpp
client/sources/UI/: authPage.cpp  mainPage.cpp
client/sources/controllers/: controller.cpp
client/sources/dispatchers/: dispatcher.cpp
client/sources/icommand/: get.cpp  login.cpp  registry.cpp  update.cpp
client/sources/models/: tableModel.cpp
headers/: clientConnection.h  dbhelper.h  dispatcher.h  packet.h  server.h  utils.h
headers/icommand/: edit.h  get.h  icommand.h  login.h  pull.h  registry.h  update.h
server/: CMakeLists.txt
server/headers/: clientConnection.h  dbhelper.h  dispatcher.h  utils.h
server/headers/icommand/: get.h  icommand.h  login.h  registry.h  rollback.h  sync.h  update.h
server/sources/: clientConnection.cpp  dbhelper.cpp  dispatcher.cpp  server.cpp
server/sources/icommand/: get.cpp  registry.cpp  sync.cpp  update.cpp
sources/: clientConnection.cpp  dbhelper.cpp  dispatcher.cpp  packet.cpp  server.cpp
sources/icommand/: edit.cpp  get.cpp  icommand.cpp  login.cpp  pull.cpp  registry.cpp  update.cpp
